<resources>
    <string name="app_name">kauf</string>
    <string name="create_an_account">Create an <br /> account.</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="welcome">Welcome.</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email_here">Enter your email here:</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_redirect">Don\'t have an account yet? Click here to sign up</string>
    <string name="log_out">Log out</string>
    <string name="login_redirect">Already have an account? Click here to log in</string>
    <string name="choose_your_theme">Choose your theme:</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system_setting">Follow system setting</string>
    <string name="shopping_starts_here">Shopping starts here.</string>
    <string name="categories">Categories:</string>
    <string name="announcements">Announcements</string>
    <string name="user_settings">User settings</string>
    <string name="app_settings">App settings</string>
    <string name="locations">Locations</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="open" />
    <string name="close" />
    <string name="settings">Settings</string>
    <string name="account_settings">Account settings</string>
    <string name="our_stores">Our stores</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">Home</string>
    <string name="title_activity_category_helper">CategoryHelper</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="flash_sales">Flash sales!</string>
    <string name="trgovina_na_rate">Trgovina na rate</string>
    <string name="kreditne_kartice">Kreditne kartice</string>
    <string name="kauf_finansiranje">Kauf Finansiranje</string>
    <string name="sindikati_i_fond_pio">Sindikati i Fond PIO</string>
    <string name="trgovina_na_cak_do_24_mjesecne_rate_uz_shopping_i_libero_kartice">Trgovina na cak do 24 mjesecne rate uz Shopping i Libero kartice</string>
    <string name="novo_kauf_finansiranje_do_36_mjesecnih_rata_u_sustini_potrosacki_kredit">Novo! Kauf Finansiranje do 36 mjesecnih rata! U sustini potrosacki kredit</string>
    <!-- to toggle the open close button of the navigation drawer -->
</resources>