<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/baseline_person"
            android:title="@string/account_settings" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/baseline_location"
            android:title="@string/our_stores"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_info"
            android:title="@string/about_us"/>
    </group>
    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>