<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.Kauf"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="20sp"
        android:layout_alignParentEnd="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.1"
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circle"
        android:shadowRadius="50"
        android:alpha="0.7"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        android:text="@string/log_in"
        android:fontFamily="@font/montsterrat_bold"
        android:textSize="40sp"
        android:paddingBottom="20sp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@id/etPassword"

        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:drawableStart="@drawable/email"
        android:drawablePadding="20sp"

        android:padding="13sp"
        android:elevation="15sp"
        android:shadowRadius="50"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:drawablePadding="20sp"

        android:padding="13sp"
        android:elevation="15sp"
        android:shadowRadius="50"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="@id/guideline4"
        app:layout_constraintBottom_toTopOf="@id/tvSignupRedirect"
        android:background="@drawable/rounded_credentials"
        android:elevation="15sp"/>

    <TextView
        android:id="@+id/tvSignupRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        android:ems="13"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register_redirect"/>


</androidx.constraintlayout.widget.ConstraintLayout>